--- a/code/Gene_Technology_showcase.ipynb
+++ b/code/Gene_Technology_showcase.ipynb
@@ -4142,7 +4142,7 @@
     "\n",
     "    outputs = predict_dataset(model, dataset, 10)\n",
     "    fold_output.append(outputs)\n",
-    "    # break\n",
+    "    break # we only use one triplet model for the showcase, because of the time and the resource limitation\n",
     "    \n",
     "final_outputs = np.mean(fold_output, axis=0)\n"
    ]
@@ -4610,9 +4610,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (altlabs)",
+   "display_name": "dsl",
    "language": "python",
-   "name": "altlabs"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -4624,7 +4624,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
